taal kan aangepast worden voor de zonmw demo

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
               </form>
 
-              <a class="nav-link" href="index-nl.html"><span id="language" class="flag-icon flag-icon-nl"></span></a>
+              <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage(true);"></span>
 
               <div id="minutesBox" class="varBox">
                <label for="minutes" style="display: inline-block;">Number of minutes:</label>
