probeersel path probleem dicts op te lossen

--- a/index.html
+++ b/index.html
@@ -638,7 +638,11 @@
 <script language="javascript" type="text/javascript" src="js/general.js"></script>
 <!-- script specific to main page -->
 <script language="javascript" type="text/javascript" src="js/signlab.js"></script>
-
+<script type="text/javascript">
+  var sentPath;
+  var vidPath;
+  var varPath;;
+</script>
 
 </body>
 </html>
