probeersel path probleem dicts op te lossen

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
               </form>
 
-              <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage(true);"></span>
+              <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();"></span>
 
               <div id="minutesBox" class="varBox">
                <label for="minutes" style="display: inline-block;">Number of minutes:</label>
