--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
 
             <!-- <br> -->
             <!-- Defines the button and label displayed for the option "ZonMwDemo" -->
-              <!-- <input type="radio" id="ZonMwDemo" name="display" value="ZonMwDemo" onclick="changeFunc(this);">
+              <!-- <input type="radio" id="ZonMwDemo" name="display" value="ZonMwDemo" onclick="changeDisplay(this);">
               <label for="ZonMwDemo" style="margin-right:5px">ZonMw Demo</label> -->
 
             <!-- <br> -->
             <!-- Defines the button and label displayed for the option "fingerspell" -->
-              <!-- <input type="radio" id="fingerspellDisplay" name="display" value="fingerspell" onclick="changeFunc(this);">
+              <!-- <input type="radio" id="fingerspellDisplay" name="display" value="fingerspell" onclick="changeDisplay(this);">
               <label for="fingerspell" style="margin-right:5px">Fingerspell</label> -->
 
             <!-- <br> -->
             <!-- Defines the button and label displayed for the option "freestyle" -->
-            <!-- <input type="radio" id="freestyleDisplay" name="display" value="freestyle" checked onclick="changeFunc(this);">
+            <!-- <input type="radio" id="freestyleDisplay" name="display" value="freestyle" checked onclick="changeDisplay(this);">
             <label for="freestyle" style="margin-right:5px"  data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed.">Avatar translation</label> -->
 
               <!-- <br>
@@ -512,12 +512,12 @@
               <h4>Choose an output option:</h4>
               <br>
               <!-- Defines the button and label displayed for the option "explanation" -->
-              <input type="radio" id="explainDisplay" name="expl" value="explain" onclick="changeFunc(this);">
+              <input type="radio" id="explainDisplay" name="expl" value="explain" onclick="changeDisplay(this);">
               <label for="avatar" style="margin-right: 5px">Explanation SiGML</label>
               <br>
               
               <!-- Defines the button and label displayed for the option "explain+ava" -->
-              <input type="radio" name="expl" id="explainAva" value="explAva" onclick="changeFunc(this);" checked>
+              <input type="radio" name="expl" id="explainAva" value="explAva" onclick="changeDisplay(this);" checked>
               <label for="explainAva" style="margin-right:5px">Explanation SiGML + avatar animation</label> 
               <br>
               
