--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
               <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();"></span>
               <!-- This button exists so that the ZonMw scripts know that the avatar option is active -->
-              <input type="radio" id="avatarDisplay" name="display" value="avatar" checked class="undisplayed">
+              <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed">
 
               <div id="minutesBox" class="varBox">
                <label for="minutes" style="display: inline-block;">Number of minutes:</label>
