--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
               </form>
 
-              <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();"></span>
+              <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();" data-toggle="tooltip" data-placement="bottom" title="Click on the flag to change the input language"></span>
               <!-- This button exists so that the ZonMw scripts know that the avatar option is active -->
               <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed">
 
