--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       <div class="container-fluid">
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-                  <h4><a href="/publications/COVID-19.pdf" download>COVID-19 ZonMw project</a></h4>
+                  <h4><a href="/publications/COVID-19.pdf" download="COVID-19">COVID-19 ZonMw project</a></h4>
                   <p class="mb-4">
                     It is challenging for healthcare professionals to communicate with Deaf patients,
                     especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
@@ -418,7 +418,7 @@
                   <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h4><a href="/publications/Corsel.pdf" download>Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</a></h4>
+                  <h4><a href="/publications/Corsel.pdf" download="Corsel">Multidimensionality in Sign Language Synthesis: Translation of Dutch into Sign Language of the Netherlands</a></h4>
                   <p class="mb-4">
                     This paper explores the implementation of a translator to sign language, using the JASigning avatarsoftware.
                     Specifically, translation of Dutch into Sign Language of the Netherlands (NGT).
@@ -435,7 +435,7 @@
                   <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h4><a href="/publications/Esselink.pdf" download>Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands</a></h4>
+                  <h4><a href="/publications/Esselink.pdf" download="Esselink">Lexical resources for sign language synthesis: The translation of Dutch to Sign Language of the Netherlands</a></h4>
                   <p class="mb-4">
                     Deaf people oftentimes have no choice but to communicate in the lingua franca of their country,
                     despite the fact that this is a second language for them. Their ability to read and write is
@@ -443,7 +443,7 @@
                     family of hearing parents, it is vital that the parents communicate with the child through sign
                     language as soon as possible, otherwise the language region of that child's brain will be
                     underdeveloped. There are currently few resources available for people to learn Sign Language
-                    of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it.
+                    of the Netherlands (NGT). A tool that makes this possible would be invaluable to those who need it. </b>
                     This thesis investigates what components are necessary to build a system that uses an avatar to
                     translate a Dutch sentence to NGT. On the basis of the workings of NGT and previous research on
                     the matter, three main components are devised and implemented: software for sign language synthesis,
@@ -454,15 +454,15 @@
                     mouth signs should particularly be improved. Moreover, further research is necessary to improve the
                     comprehensibility of signs.
                   </p>
-                  <hr class="d-none d-lg-block mb-0 ml-0" /></b>
+                  <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
-                  <h5><a href="/publications/Mende_Gillings.pdf" download>The signing space for the synthesis of directional verbs in NGT</a></h4>
+                  <h5><a href="/publications/Mende_Gillings.pdf" download="Mende_Gillings">The signing space for the synthesis of directional verbs in NGT</a></h4>
                   <p class="mb-4">
                     Hearing parents who have deaf children are often put in a difficult position.
                     They most likely know no sign language and resources for learning are limited and expensive.
                     Research into sign language translation and synthesis has increased in the past two decades,
-                    due to a growing interest into making public spaces and services more accessible to Deaf people.
+                    due to a growing interest into making public spaces and services more accessible to Deaf people.</b>
                     This research looks at the potential of a translator from Dutch to Dutch sign language (NGT)
                     using a sign language avatar. In particular the focus lies on the synthesis of directional verbs,
                     a critical grammatical component of sign language. The implementation is very limited and therefore
