footer fixed bottom

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white fadeIn undisplayed" id="Translate">
+<section class="projects-section bg-light fadeIn undisplayed" id="Translate">
     <div class="container-fluid" style="width: 100%;">
       <div id="alertMainTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
@@ -396,12 +396,12 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-white fadeIn undisplayed" id="Publications">
+<section class="projects-section bg-light fadeIn undisplayed" id="Publications">
 
       <div class="container-fluid">
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-                  <h4><a href="publications/COVID-19.pdf" download="COVID-19">COVID-19 ZonMw project</a></h4>
+                  <h4><a href="publications/COVID-19.pdf" download="COVID-19">Sign Language Translation in a Healthcare Setting</a></h4>
                   <p class="mb-4">
                     It is challenging for healthcare professionals to communicate with Deaf patients,
                     especially in times of COVID-19. Sign language interpreters cannot always enter hospitals and
@@ -650,20 +650,20 @@
     <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
-                <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-                    <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19">Covid-19 ZonMw project</a></h4>
-                    <p class="mb-4">
-                      As a result of Covid-19, the treatment and diagnosis of deaf patients has become more difficult. Facemasks are mandatory in many settings, making lipreading no longer an option and restrictions can inhibit access to sign language interpreters. This in turn limits effective communication between healthcare workers and deaf patients which is a problem in a setting where it is crucial. To help resolve this issue a tool was developed for translating question that are common in the diagnosis and treatment of Covid-19 into NGT. We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
-                <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-                    </p>
-                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
+            <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
+                <h4><a class="nav-link" href="https://projects.illc.uva.nl/signlanguage/covid19">COVID-19 ZonMw project</a></h4>
+                <p class="mb-4">
+                  As a result of COVID-19, the treatment and diagnosis of deaf patients has become more difficult. Facemasks are mandatory in many settings, making lipreading no longer an option and restrictions can inhibit access to sign language interpreters. This in turn limits effective communication between healthcare workers and deaf patients which is a problem in a setting where it is crucial. To help resolve this issue a tool was developed for translating question that are common in the diagnosis and treatment of COVID-19 into NGT. We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
+            <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
+                </p>
+                <hr class="d-none d-lg-block mb-0 ml-0" />
+            </div>
         </div>
     </div>
 </section>
 
 <!-- Footer-->
-<footer class="footer bg-light small text-center text-black-50"><div class="container">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
+<footer class="footer bg-white small text-center text-black-50 fixed-bottom"><div class="container">&copy;2020 SignLab Amsterdam <i class="material-icons">email</i>: signlab.amsterdam@gmail.com</div></footer>
 
 
 <!-- Javascripts -->
